--- a/planning/mission_planner/package.xml
+++ b/planning/mission_planner/package.xml
@@ -11,6 +11,7 @@
   <buildtool_depend>ament_cmake_auto</buildtool_depend>
 
   <depend>autoware_auto_planning_msgs</depend>
+  <depend>autoware_parking_srvs</depend>
   <depend>geometry_msgs</depend>
   <depend>lanelet2_extension</depend>
   <depend>rclcpp</depend>
