[mp] Use multi_thread_executor (waiting for https://github.com/ros2/rclcpp/pull/1898)

--- a/planning/mission_planner/CMakeLists.txt
+++ b/planning/mission_planner/CMakeLists.txt
@@ -30,6 +30,7 @@ endif()
 rclcpp_components_register_node(mission_planner_node
   PLUGIN "mission_planner::MissionPlannerLanelet2"
   EXECUTABLE mission_planner
+  EXECUTOR MultiThreadedExecutor
 )
 
 ament_auto_add_library(goal_pose_visualizer_node SHARED
