--- a/planning/auto_parking_planner/CMakeLists.txt
+++ b/planning/auto_parking_planner/CMakeLists.txt
@@ -15,6 +15,7 @@ ament_auto_find_build_dependencies()
 
 ament_auto_add_library(auto_parking_planner_node SHARED
   src/auto_parking_planner.cpp
+  src/utils.cpp
   src/preparation.cpp
   src/circular_route_planning.cpp
 )
