--- a/planning/freespace_planner/package.xml
+++ b/planning/freespace_planner/package.xml
@@ -13,6 +13,7 @@
   <buildtool_depend>ament_cmake_auto</buildtool_depend>
 
   <depend>autoware_auto_planning_msgs</depend>
+  <depend>autoware_parking_srvs</depend>
   <depend>tier4_planning_msgs</depend>
   <depend>tier4_autoware_utils</depend>
   <depend>freespace_planning_algorithms</depend>
