--- a/planning/auto_parking_planner/CMakeLists.txt
+++ b/planning/auto_parking_planner/CMakeLists.txt
@@ -19,6 +19,7 @@ ament_auto_add_library(auto_parking_planner_node SHARED
   src/preparation.cpp
   src/circular_route_planning.cpp
   src/preparking_route_planning.cpp
+  src/parking_route_planning.cpp
 )
 
 rclcpp_components_register_node(auto_parking_planner_node
