--- a/planning/auto_parking_planner/package.xml
+++ b/planning/auto_parking_planner/package.xml
@@ -12,6 +12,7 @@
 
   <depend>autoware_auto_planning_msgs</depend>
   <depend>autoware_auto_system_msgs</depend>
+  <depend>autoware_auto_vehicle_msgs</depend>
   <depend>autoware_parking_srvs</depend>
   <depend>freespace_planning_algorithms</depend>
   <depend>geometry_msgs</depend>
