--- a/planning/freespace_planning_algorithms/CMakeLists.txt
+++ b/planning/freespace_planning_algorithms/CMakeLists.txt
@@ -28,6 +28,7 @@ target_link_libraries(informed_rrtstar
 ament_auto_add_library(freespace_planning_algorithms SHARED
   src/abstract_algorithm.cpp
   src/astar_search.cpp
+  src/grid_informed_rrtstar.cpp
 )
 
 target_link_libraries(freespace_planning_algorithms
