--- a/planning/freespace_planning_algorithms/CMakeLists.txt
+++ b/planning/freespace_planning_algorithms/CMakeLists.txt
@@ -28,7 +28,7 @@ target_link_libraries(rrtstar_core
 ament_auto_add_library(freespace_planning_algorithms SHARED
   src/abstract_algorithm.cpp
   src/astar_search.cpp
-  src/informed_rrtstar.cpp
+  src/rrtstar.cpp
 )
 
 target_link_libraries(freespace_planning_algorithms
